--- a/css/main.scss
+++ b/css/main.scss
@@ -43,3 +43,11 @@ $palette: (
 @import "imports/footer";
 @import "imports/banner";
 
+#neco {
+  color: #0c8aea;
+}
+
+.list-header {
+  font-style: italic;
+  font-weight: bolder;
+}
