add blog and about

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,9 @@ $palette: (
   font-style: italic;
   font-weight: bolder;
 }
+
+article {
+  .short-description {
+    font-style: italic;
+  }
+}
