--- a/css/main.scss
+++ b/css/main.scss
@@ -62,3 +62,11 @@ article {
   font-weight: bold;
   text-decoration: underline;
 }
+
+.search-form {
+  display: flex;
+}
+
+#search-submit {
+  margin-top: 1.4em;
+}
