--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,37 @@
 <header id="masthead" class="site-header outer">
   <div class="inner">
     <div class="site-header-inside">
-      {% include breadcrumbs.html %}
+      <div class="site-branding">
+        {% assign logo_img_is_not_empty = site.header.logo_img | is_not_empty %}
+
+
+        {% if page.title != "nurmaali" %}
+
+          {% if logo_img_is_not_empty %}
+            <p class="site-logo">
+              <a href="{{ '/' | relative_url }}"><img src="{{ site.header.logo_img | relative_url }}" alt="{{ site.header.logo_img_alt }}" /></a>
+            </p>
+          {% else %}
+            <p class="site-title"><a href="{{ '/' | relative_url }}">{{ site.header.title }}</a></p>
+          {% endif %}
+
+        {% else %}
+
+        {% if logo_img_is_not_empty %}
+        <p class="site-logo disable-links">
+          <img src="{{ site.header.logo_img | relative_url }}" alt="{{ site.header.logo_img_alt }}" />
+        </p>
+        {% else %}
+          <p class="site-title disable-links">{{ site.header.title }}</p>
+        {% endif %}
+
+        {% endif %}
+
+
+
+
+
+      </div><!-- .site-branding -->
 
       {% assign has_nav_is_not_empty = site.header.has_nav | is_not_empty %}
       {% if has_nav_is_not_empty %}
@@ -24,5 +54,9 @@
       {% endif %}
     </div><!-- .site-header-inside -->
   </div><!-- .inner -->
+
+  <div class="inner">
+    {% include breadcrumbs.html %}
+  </div>
 
 </header><!-- .site-header -->
