--- a/css/main.scss
+++ b/css/main.scss
@@ -85,4 +85,19 @@ p > a.current-home {
 
 #breadcrumbs {
   margin-top: 1em;
+
+  ol {
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+
+    li {
+      display: inline;
+    }
+  }
+}
+
+.capitalize-text {
+  text-transform: capitalize;
 }
