fix bread crumbs and home link

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -6,7 +6,7 @@
 	{% if page.title != "nurmaali" %}
 		<li><a href="{{ '/' | relative_url }}">home</a></li>
 	{% else %}
-		home
+		<li>home</li>
 	{% endif %}
 	{% for crumb in crumbs offset: 1 %}
 	{% if forloop.last %}
