--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -47,7 +47,7 @@
   margin: 0;
   text-transform: uppercase;
 
-  a {
+  a, span {
     background: _palette(accent);
     display: inline-block;
     padding: 0.2em 0.45em;
