--- a/_sass/imports/_buttons.scss
+++ b/_sass/imports/_buttons.scss
@@ -13,7 +13,7 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  font-size: 16px;
+  font-size: 0.9em;
   font-weight: bold;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -44,7 +44,7 @@
 
   &:before,
   &:after {
-    border: 2px solid currentColor;
+    border: .2em solid currentColor;
     box-sizing: border-box;
     color: inherit;
     content: "";
