--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -2,7 +2,7 @@
  * Site Footer
  */
 .site-footer {
-  border-top: 1px solid _palette(charcoal-light-75);
+  border-top: 0.1em solid _palette(charcoal-light-75);
   padding-bottom: 1.33333em;
   padding-top: 2.5em;
 
@@ -48,7 +48,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  font-size: 14px;
+  font-size: 0.7em;
   line-height: 1.3;
   margin-bottom: 1.25em;
   margin-top: 3em;
@@ -62,13 +62,13 @@
 .site-info {
   .copyright,
   > a {
-    margin: 0 10px 0.25em 0;
+    margin: 0 0.3em 0.25em 0;
   }
 }
 
 .social-links {
   a {
-    margin: 0 20px 0.25em 0;
+    margin: 0 1em 0.25em 0;
 
     &:not(.button) {
       border: 0;
@@ -76,7 +76,7 @@
   }
 
   .icon {
-    font-size: 18px;
+    font-size: 1.2em;
   }
 }
 
@@ -99,7 +99,7 @@
     margin-left: auto;
 
     a {
-      margin-left: 30px;
+      margin-left: 2.5em;
       margin-right: 0;
     }
   }
