fix search input required

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     >
       <div class="form-group">
         <label for="search_content_term" hidden>Search term</label>
-        <input type="text" name="search_content_term" id="search_content_term" placeholder="Search on this site" />
+        <input type="text" name="search_content_term" id="search_content_term" placeholder="Search on this site" required />
         <span class="animate-border" aria-hidden="true"></span>
       </div>
       <div class="form-submit" id="search-submit">
