refactor breadcrumbs with ::before selector
* show no breadcrumbs on index page

--- a/css/main.scss
+++ b/css/main.scss
@@ -95,6 +95,12 @@ p > a.current-home {
     li {
       display: inline;
     }
+
+    li:not(:first-of-type) {
+      &::before {
+        content: '/ ';
+      }
+    }
   }
 }
 
