--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -4,13 +4,14 @@
 	{% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
 
 	{% if page.title != "nurmaali" %}
-		<li><a href="{{ '/' | relative_url }}">home</a></li>
+		<li><a href="{{ '/' | relative_url }}">Alisher Nurmatov</a></li>
 	{% else %}
-		<li>home</li>
+<!-- display nothing on index page -->
+<!--		<li>home</li>-->
 	{% endif %}
 	{% for crumb in crumbs offset: 1 %}
 	{% if forloop.last %}
-	<li>/ {{ page.title }}</li>
+	<li>{{ page.title }}</li>
 	{% else %}
 
 	{% assign crumb_limit = forloop.index | plus: 1 %}
@@ -18,7 +19,7 @@
 	{% for crumb in crumbs limit: crumb_limit %}
 		{% assign tmp = tmp | append: crumb | append: '/' %}
 	{% endfor %}
-	<li>/ <a href="{{ tmp | prepend: site.baseurl | replace: '//','/' }}">{{ tmp | replace: '/', '' | replace:'-',' ' | remove:'.html' | capitalize }}</a></li>
+	<li><a href="{{ tmp | prepend: site.baseurl | replace: '//','/' }}">{{ tmp | replace: '/', '' | replace:'-',' ' | remove:'.html' | capitalize }}</a></li>
 	{% endif %}
 	{% endfor %}
 
