--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -176,7 +176,12 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 50rem) {
+
+  .menu {
+    display: block;
+  }
+
   .site-header {
     &:after {
       background: rgba(_palette(charcoal),.6);
