--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,9 +9,9 @@ layout: body
       <h1 class="post-title line-top">{{ page.title }}</h1>
       {% assign subtitle_is_not_empty = page.subtitle | is_not_empty %}
       {% if subtitle_is_not_empty %}
-      <div class="post-subtitle">
+      <p class="post-subtitle">
         {{ page.subtitle }}
-      </div>
+      </p>
       {% endif %}
     </header>
     {% assign image_is_not_empty = page.image | is_not_empty %}
