--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -13,7 +13,7 @@ layout: body
   </header><!--.page-header -->
 
   <div class="portfolio-feed layout-{{ page.layout_style }}">
-    {% assign display_projects = '/portfolio' | get_pages | sort: 'date' | reverse %}
+    {% assign display_projects = '/projects' | get_pages | sort: 'date' | reverse %}
     {% for post in display_projects %}
     <article class="project">
       <a href="{{ post.url | relative_url }}" class="project-link">
@@ -29,6 +29,6 @@ layout: body
       </a>
     </article><!-- .project -->
     {% endfor %}
-  </div><!-- .portfolio-feed -->
+  </div><!-- .projects-feed -->
 
 </div><!-- .inner -->
