add pictures of food on about page

--- a/css/main.scss
+++ b/css/main.scss
@@ -133,3 +133,15 @@ p > a.current-home {
     display: none;
   }
 }
+
+ol.food-gallery {
+  li {
+    margin-top: 2em;
+
+    figure {
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
