add popisky to the projects

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -25,6 +25,7 @@ layout: body
         {% endif %}
         <header class="project-header">
           <h2 class="project-title">{{ post.title }}</h2>
+          <p class="project-title">{{ post.popisek }}</p>
         </header>
       </a>
     </article><!-- .project -->
