--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         <span class="animate-border" aria-hidden="true"></span>
       </div>
       <div class="form-submit" id="search-submit">
-        <button type="submit" class="button">Find</button>
+        <button type="submit" class="button shifted-button">Find</button>
       </div>
     </form>
 
