--- a/css/main.scss
+++ b/css/main.scss
@@ -153,3 +153,8 @@ ol.food-gallery {
 time.published:before {
   content: '[Published] '
 }
+
+button.shifted-button {
+  position: relative;
+  top: 0.35em;
+}
