remove hover effect from the porfolio

--- a/_sass/imports/_portfolio.scss
+++ b/_sass/imports/_portfolio.scss
@@ -137,7 +137,8 @@
     }
 
     .project-title {
-      opacity: 0;
+      opacity: 1;
+      visibility: visible;
       -webkit-transition: opacity .3s;
       transition: opacity .3s;
     }
