refactor non printable elements

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,4 +1,4 @@
-<nav class="capitalize-text" id="breadcrumbs">
+<nav class="capitalize-text non-printable" id="breadcrumbs">
 	<ol>
 
 	{% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
