--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             id="searchContentForm_1"
             action="{{ '/search' | relative_url }}"
             method="GET"
-            class="search-form"
+            class="search-form non-printable"
     >
       <div class="form-group">
         <label for="search_content_term" hidden>Search term</label>
