--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
       {% assign has_nav_is_not_empty = site.header.has_nav | is_not_empty %}
       {% if has_nav_is_not_empty %}
       <button id="menu-open" class="menu-toggle"><span class="screen-reader-text">Close Menu</span><span class="icon-menu" aria-hidden="true"></span></button>
-      <nav id="main-navigation" class="site-navigation" aria-label="Main Navigation">
+      <nav id="main-navigation" class="site-navigation non-printable" aria-label="Main Navigation">
         <div class="site-nav-inside">
           <button id="menu-close" class="menu-toggle"><span class="screen-reader-text">Open Menu</span><span class="icon-close" aria-hidden="true"></span></button>
           <ul class="menu">
