--- a/css/main.scss
+++ b/css/main.scss
@@ -130,14 +130,13 @@ span.upper {
 }
 
 @media print {
-  //#main-navigation {
-  //  display: none;
-  //}
-  //#searchContentForm_1 {
-  //  display: none;
-  //}
   .non-printable {
     display: none;
+  }
+  .project-thumbnail {
+    img {
+      z-index: 42;
+    }
   }
 }
 
